@@ -4,6 +4,10 @@
     Fix a valgrind warning which occured when the call back function returns
     a count of zero without modifying the pointer value. Thanks to Paul Kelly.
 
+    * tests/callback_test.c
+    Add a callback test where the callback returns a zero count without setting
+    the data pointer. The problem can only be detected when run under valgrind.
+
 2008-07-09  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/src_sinc.c
